@@ -12,3 +12,4 @@
  14-Aug-2019    V0.19 Adjust cache management
  29-Aug-2019    V0.20 Add ScopClassificationProvider() and CathClassificationProvider()
  23-Nov-2019    V0.21 Move pipeline to py38
+ 10-Jan-2020    V0.22 Add fallback data source targets for CATH
